# launcher-gw

./: .editorconfig  .gitignore  .gitlab-ci.yml  .prettierrc  package-lock.json  package.json  tsconfig.json  vite.config.js
.github/workflows/: build.yml  release.yml
scripts/: bump.sh
src/: App.svelte  Header.svelte  consts.ts  errors.ts  index.html  init.ts  langInit.ts  main.ts  typing.d.ts
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/src/: consts.rs  lib.rs  logger.rs  main.rs  setup.rs
src-tauri/src/configs/: AppConfig.rs  GameConfig.rs  RunConfig.rs  mod.rs
src-tauri/src/gitlab/: Gitlab.rs  client.rs  create_release.rs  files.rs  mod.rs  models.rs  release.rs
src-tauri/src/handlers/: compress.rs  configs.rs  continue_download_version.rs  continue_upload.rs  dto.rs  gitlab.rs  logger.rs  mod.rs  permissions.rs  process.rs  profiles.rs  register.rs  register_window_handlers.rs  release.rs  service.rs  start_download_version.rs  system.rs  updater.rs  upload.rs  upload_v2.rs  user_ltx.rs  window.rs
src-tauri/src/providers/: ApiProvider.rs  dto.rs  mod.rs
src-tauri/src/providers/ApiClient/: ApiClient.rs  mod.rs
src-tauri/src/providers/Github/: Github.rs  files.rs  issues.rs  launcher.rs  mod.rs  models.rs  release.rs  repo.rs
src-tauri/src/providers/Gitlab/: Gitlab.rs  create.rs  files.rs  group.rs  issues.rs  launcher.rs  mod.rs  models.rs  release.rs  repo.rs
src-tauri/src/service/: client.rs  create_release.rs  dto.rs  files.rs  get_release.rs  keybind_manager.rs  main.rs  mod.rs  unpack.rs  updater.rs  wake_detector.rs
src-tauri/src/utils/: CountingWriter.rs  clear_dir.rs  encoding.rs  errors.rs  mod.rs  parse_strings.rs  paths.rs  resources.rs  split_args.rs  url.rs  video.rs
src-tauri/src/utils/git/: grouping.rs  init.rs  mod.rs  push.rs  repo.rs  state.rs
src/Components/: Bg.svelte  Button.svelte  Checkbox.svelte  Header.svelte  LaunchBtn.svelte  LinksBar.svelte  MenuBar.svelte  Progress.svelte  Radio.svelte  Scroll.svelte  SelectGroup.svelte  Spin.svelte  TrackBar.svelte
src/Dialogs/: AddVersion.svelte  ApplyProfileOk.svelte  Base.svelte  CannotApplyProfile.svelte  RemoveProfile.svelte  RemoveVersion.svelte  RestartApp.svelte  index.svelte
src/Icons/: Boosty.svelte  CinC.svelte  Discord.svelte  Home.svelte  Installed.svelte  Installed2.svelte  Keybindings.svelte  Pack.svelte  Patreon.svelte  Pause.svelte  Play.svelte  Releases.svelte  RunParams.svelte  Settings.svelte  Steam.svelte  Stop.svelte  Tg.svelte  ToDownload.svelte  Tokens.svelte  Unpack.svelte  Versions.svelte  Vk.svelte  Youtube.svelte  index.ts  wrap.svelte
src/Views/: Keybindings.svelte  Main.svelte  Pack.svelte  Releases.svelte  RunParams.svelte  Settings.svelte  Tokens.svelte  Unpack.svelte  Versions.svelte
src/lib/: download.ts  main.ts  pack.ts  profiles.ts  unpack.ts  upload.ts
src/locales/: en.json  ru.json
src/routes/: +page.svelte
src/store/: helpers.ts  main.ts  menu.ts  pack.ts  profiles.ts  upload.ts
src/utils/: BiMap.ts  checks.ts  dwn.ts  path.ts
