[package]
name = "Stalker-GW"
version = "0.1.0"
description = "A Tauri App"
authors = ["Chugunov Roman"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "gw_launcher_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
chrono = { version = "0.4", features = ["clock"] }
log = { version = "0.4.20", features = ["std"] }
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-sys = { git = "https://github.com/JonasKruckenberg/tauri-sys", branch = "v2" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["sync"] }
sysinfo = "0.37.2"
uuid = { version = "1.8", features = ["v4"] }
winit = "0.29"
tauri-plugin-clipboard-manager = "2"
reqwest = "0.12.24"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-window-state = "2"
tauri-plugin-shell = "2"

