[package]
name = "Stalker-GW"
version = "0.1.2"
description = "A Tauri App"
authors = ["Chugunov Roman"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "gw_launcher_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
chrono = { version = "0.4", features = ["clock"] }
log = { version = "0.4.20", features = ["std"] }
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-sys = { git = "https://github.com/JonasKruckenberg/tauri-sys", branch = "v2" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["sync", "process", "io-util", "rt", "full"] }
futures-util = { version = "0.3", default-features = false, features = ["alloc"] }
sysinfo = "0.37.2"
anyhow = { version = "1", features = ["backtrace"] }
uuid = { version = "1.8", features = ["v4"] }
winit = "0.29"
tauri-plugin-clipboard-manager = "2"
reqwest = { version = "0.12", features = ["json", "rustls-tls", "stream"] }
urlencoding = "2.1"
sha2 = "0.10"
tauri-plugin-dialog = "2.4.0"
regex = "1"
git2 = "0.20.2"
async-trait = "0.1.89"
bytes = "1.10.1"
base64 = "0.22.1"
url = "2.5.7"
fs2 = "0.4.3"
tokio-stream = "0.1.17"
fs4 = "0.13.1"
scopeguard = "1.2.0"
encoding_rs = "0.8.35"
self-replace = "1.5.0"
semver = "1.0.27"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-window-state = "2"
tauri-plugin-shell = "2"
